Fixed React Select issues: Broken styling after update, buggy behaviour on overflowing select components. Shaking effect in IE.

--- a/src/main/scss/header.scss
+++ b/src/main/scss/header.scss
@@ -40,8 +40,7 @@ header {
     }
 
     .Select-input > input {
-      height: $space-height-header-buttons - 2;
-      line-height: $space-height-header-buttons - 2;
+      padding: 0;
     }
 
     .Select-menu-outer {
